--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
-</html>
+<html>
+    <head lang="es-Es">
+        <meta charset="utf-8">
+        <title>Mitología Nórdica</title>
+        <link rel="stylesheet" href="index.css">
+    </head>
+    <body>
+   <header>
+    <div class="logo">
+        <img src="Imagenes/LogoEspoch.png"  alt="logo" class="logoimg">
+       <h1 class="logonombre">Escuela Superior Politecnica de Chimborazo</h1> 
+       </div>     
+      </header>
+       <nav class="menuH"> 
+       <a href="Personajes.html">Personajes</a>    
+      <a href="Mundos.html">Mundos</a>
+       <a href="Epocas.html">Épocas</a>    
+       <a href="Adaptaciones.html">Adaptaciones</a>   
+       </nav>
+       <h1> La Historia de la Mitología Nórdica</h1>
+       <h3>Una Pequeña Introducción</h3>
+           <br/>
+           
+               <p>Las fuentes de la mitología nórdica son (principalmente) las Eddas, la Edda Mayor y la Edda menor.
+   <br/>
+   La Edda Mayor, que es también la más antigua, es una colección de poemas anónimos. El idioma es islandés y data del año 1000 o incluso antes. Se pueden dividir los poemas en dos grupos: poemas míticos que hablan sobre la creación y el fin del mundo, y los poemas heroicos que hablan principalmente sobre Odin y Thor.
+   <br/>
+   La Edda Menor es también llamada la Edda de Snorre Sturluson quien lo escribió alrededor de 1220. Es un manual de poesía para los escaldos. Consta de tres partes:
+   <br/>
+   Gylfaginning es una descripción de la mitología, es decir el mito de la creación del mundo, de los dioses y de sus vidas. El propósito de contar los mitos era dar a los escaldos la base de su poesía.
+   <br/>
+   Skáldskaparmál es una presentación sistemática del lenguaje de los escaldos, y contiene asimismo muchas citas de poemas de escaldos denominados y anónimos.
+   <br/>
+   Hattal significa registro de metros. Consta de un poema de 102 estrofas, cada una con su propia peculiaridad métrica o lingüística, mostrando así las reglas del lenguaje poético.
+           </p>
+           <br/>
+           <div class="img1">
+           <h1> El Arbol Yggdrasil y los 9 mundos</h1>
+           <p>Aquí podemos observar una representación grafica del Yggdrasilel árbol de la vida, o fresno del universo, en la mitología nórdica. Sus raíces y ramas mantienen unidos los diferentes mundos</p>
+               <br/>
+           <img src="Imagenes/arbol.jpg">
+           </div>
+           <br/>
+           <h3>Pasword is: test</h3>
+             
+           <div id="root"></div>
+           <footer>
+           <h2>Elaborado por Juan Montesdeoca</h2>    
+        <img src="Imagenes/marca.gif">
+           <h2>©Derechos Reservados</h2>
+       </footer>
+       </body>
+   </html>
