--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head lang="es-Es">
         <meta charset="utf-8">
         <title>Mitología Nórdica</title>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="indexhtml.css">
     </head>
     <body>
    <header>
