--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
            </div>
            <br/>
            <h3>Pasword is: test</h3>
-           <div id="root"></div>
+           <div id="root" width="900px" height="550px"></div>
            <footer>
            <h2>Elaborado por Juan Montesdeoca</h2>    
         <img src="Imagenes/marca.gif">
