--- a/public/index.html
+++ b/public/index.html
@@ -42,8 +42,10 @@
            <img src="Imagenes/arbol.jpg">
            </div>
            <br/>
+           <div class="root">
            <h3>Pasword is: test</h3>
-           <div id="root" width="900px" height="550px"></div>
+           <div id="root"></div>
+            </div>
            </br>
            <footer>
            <h2>Elaborado por Juan Montesdeoca</h2>    
